--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "apiKey": "YOUR_OPENAI_API_KEY",
+  "apiKey": "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",
   "model": "PREFERRED_MODEL_NAME"
 }
